fixed timed module styles on mobile format

--- a/src/assets/css/essayWriting.sass
+++ b/src/assets/css/essayWriting.sass
@@ -323,3 +323,10 @@
 .textbox 
     max-width: 948px
 
+.no-scroll-bar::-webkit-scrollbar
+    display: none
+
+
+.no-scroll-bar 
+    -ms-overflow-style: none
+    scrollbar-width: none
